--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
     "react-tailwindcss-datepicker": "^1.6.1",
+    "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
